fixed text alignment

--- a/src/h5/HW5.module.css
+++ b/src/h5/HW5.module.css
@@ -1,7 +1,6 @@
 .container {
     width: 700px;
     margin: 0 auto;
-    text-align: center;
 }
 
 .menu {
