--- a/src/h6/HW6.module.css
+++ b/src/h6/HW6.module.css
@@ -3,4 +3,5 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    text-align: center;
 }
